--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.4.0"
+    "@tauri-apps/api": "^1.4.0",
+    "bootstrap": "^5.3.1"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
+    "@tauri-apps/cli": "^1.4.0",
     "@tsconfig/svelte": "^5.0.0",
+    "node-sass": "^9.0.0",
+    "sass": "^1.66.0",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.6",
-    "svelte-preprocess": "^5.0.0",
+    "svelte-preprocess": "^5.0.4",
     "tslib": "^2.6.0",
     "typescript": "^5.0.2",
-    "vite": "^4.4.4",
-    "@tauri-apps/cli": "^1.4.0"
+    "vite": "^4.4.4"
   }
 }
