--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^1.4.0",
-    "axios": "^1.4.0",
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.1",
+    "font-awesome": "^4.7.0",
     "path": "^0.12.7",
     "svelte-navigator": "^3.2.2",
     "svelte-toasts": "^1.1.2",
