--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,7 +16,8 @@ tauri-build = { version = "1.4", features = [] }
 tauri = { version = "1.4", features = [ "window-unminimize", "window-start-dragging", "window-show", "window-hide", "window-maximize", "window-minimize", "window-unmaximize", "window-close"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-reqwest = { version = "0.11", features = ["blocking", "json"] }
+regex = "1.4.6"
+reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
 tokio = { version = "1", features = ["full"] }
 
 [features]
