--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.3.1",
     "font-awesome": "^4.7.0",
     "path": "^0.12.7",
+    "svelte-jsoneditor": "^0.18.9",
     "svelte-navigator": "^3.2.2",
     "svelte-toasts": "^1.1.2",
     "yup": "^1.2.0"
