--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@tauri-apps/api": "^1.4.0",
     "@tauri-apps/cli": "^1.5.1",
     "axios": "^1.5.1",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "bootstrap": "^5.3.1",
     "font-awesome": "^4.7.0",
     "path": "^0.12.7",
+    "svelte-agnostic-draggable": "^0.2.0",
     "svelte-jsoneditor": "^0.18.9",
     "svelte-navigator": "^3.2.2",
+    "svelte-sortablejs": "^0.2.0",
     "svelte-toasts": "^1.1.2",
     "yup": "^1.2.0"
   },
