--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.5.1",
     "body-scroll-lock": "^4.0.0-beta.0",
     "bootstrap": "^5.3.1",
+    "btoa": "^1.2.1",
     "font-awesome": "^4.7.0",
     "path": "^0.12.7",
     "svelte-agnostic-draggable": "^0.2.0",
