--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "sass": "^1.66.0",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.6",
+    "svelte-loading-spinners": "^0.3.4",
     "svelte-preprocess": "^5.0.4",
     "tslib": "^2.6.0",
     "typescript": "^5.0.2",
