--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.3.1",
     "btoa": "^1.2.1",
     "font-awesome": "^4.7.0",
+    "jsoneditor": "^9.10.3",
     "path": "^0.12.7",
     "svelte-agnostic-draggable": "^0.2.0",
     "svelte-jsoneditor": "^0.18.9",
