--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,8 +16,10 @@ tauri-build = { version = "1.4", features = [] }
 tauri = { version = "1.4", features = [ "window-unminimize", "window-start-dragging", "window-show", "window-hide", "window-maximize", "window-minimize", "window-unmaximize", "window-close"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml = "0.8"
 json = "0.12.4"
 regex = "1.4.6"
+dotenv = "0.15"
 reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
 tokio = { version = "1", features = ["full"] }
 
