--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,8 +19,9 @@ serde_json = "1.0"
 json = "0.12.4"
 regex = "1.4.6"
 dotenv = "0.15"
-reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
+reqwest = { version = "0.11", features = ["blocking", "json", "multipart", "stream"] }
 tokio = { version = "1", features = ["full"] }
+tokio-util = { version = "0.6", features = ["full"] }
 
 
 [features]
