--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "svelte-navigator": "^3.2.2",
     "svelte-sortablejs": "^0.2.0",
     "svelte-toasts": "^1.1.2",
+    "uuid": "^9.0.1",
     "yup": "^1.2.0"
   },
   "devDependencies": {
