--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "font-awesome": "^4.7.0",
     "jsoneditor": "^9.10.3",
     "path": "^0.12.7",
+    "petrel": "^1.0.7",
     "svelte-agnostic-draggable": "^0.2.0",
     "svelte-jsoneditor": "^0.18.9",
     "svelte-navigator": "^3.2.2",
