--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -39,6 +39,7 @@ jobs:
         run: |
           # Upload the archive to App Center (replace with your App Center app name)
           appcenter distribute release -f app.tar.gz -g Collaborators -a Sparrow 
+          appcenter login --token ${{ secrets.APPCENTER_API_TOKEN }}
 
         env:
           APPCENTER_TOKEN: ${{ secrets.APPCENTER_API_TOKEN }}
