--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -26,7 +26,7 @@ jobs:
           
       - name: Install dependencies
         run: |
-          npm install --force
+          npm install --legacy-peer-deps
           npm build
           npm tauri build
           
