--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -6,6 +6,7 @@ on:
       - development
 env: 
   VITE_API_URL: ${{secrets.VITE_API_URL}}
+  IMPORT_PATH: './src/pages/Dashboard/Dashboard.svelte'
 
 jobs:
   deploy:
