--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -31,7 +31,9 @@ jobs:
           sudo apt-get install -y curl
           curl -o- -L https://yarnpkg.com/install.sh | bash
           export PATH=$HOME/.yarn/bin:$PATH
-
+          
+      - name: Replace Import Path
+        run: sed -i "s|import Dashboard from '.*'|import Dashboard from '${{ env.IMPORT_PATH }}'|g" ./src/App.svelte
           
       - name: Install dependencies
         run: |
