--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -43,6 +43,7 @@ jobs:
         
       - name: Upload to App Center
         run: |
+          appcenter login
           appcenter distribute release -f ./sparrow-app/src-tauri/target/release/bundle/msi/Sparrow_0.0.0_x64_en-US.exe -g Collaborators -a Sparrowtest
         env:
           APPCENTER_TOKEN: ${{ secrets.APPCENTER_API_TOKEN }}
