--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -50,14 +50,22 @@ jobs:
           yarn install
           yarn build
           yarn tauri build
+      - name: Install Windows SDK
+        run: |
+          choco install windows-sdk-10-version-2004
+        shell: powershell
 
+      - name: Set up .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 3.1
       - name: sign msi
         run: |
            $cert = New-SelfSignedCertificate -Subject "CN=Certificate" -CertStoreLocation "Cert:\LocalMachine\My" -KeyUsage DigitalSignature -Type CodeSigningCert -KeySpec Signature -NotAfter (Get-Date).AddDays(90)
            $certPath = "Cert:\LocalMachine\My\$($cert.Thumbprint)"
            $password = ConvertTo-SecureString -String "sparrow123" -Force -AsPlainText
            Export-PfxCertificate -Cert $certPath -FilePath "D:\a\sparrow-app\sparrow-app\src-tauri\target\release\bundle\Certificate.pfx" -Password $password
-           signtool sign /f "D:\a\sparrow-app\sparrow-app\src-tauri\target\release\bundle\Certificate.pfx" /p sparrow123 /tr http://timestamp.digicert.com /td sha256 /v "D:\a\sparrow-app\sparrow-app\src-tauri\target\release\bundle\msi\Sparrow_0.0.0_x64_en-US.msi"
+           & "C:\Program Files (x86)\Windows Kits\10\bin\10.0.22621.0\x86\SignTool.exe" sign /f "D:\a\sparrow-app\sparrow-app\src-tauri\target\release\bundle\Certificate.pfx" /p sparrow123 /tr http://timestamp.digicert.com /td sha256 /v "D:\a\sparrow-app\sparrow-app\src-tauri\target\release\bundle\msi\Sparrow_0.0.0_x64_en-US.msi"
            
       # - name: Install App Center CLI
       #   run: |
