--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -20,6 +20,18 @@ jobs:
         with:
           node-version: 18.x
 
+      - name: Install Windows SDK
+        run: |
+          # Download and install Windows 10 SDK
+          Invoke-WebRequest -Uri https://aka.ms/winsdk/10/latest/SdkSetup.exe -OutFile $env:TEMP\SdkSetup.exe
+          Start-Process -Wait -FilePath $env:TEMP\SdkSetup.exe -ArgumentList '/quiet /features /installpath:C:\Program Files (x86)\Windows Kits\10'
+        shell: powershell
+
+      - name: Set up .NET Core
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 3.1
+
       # - name: Install App Center CLI
       #   run: |
       #     npm install -g appcenter-cli
@@ -50,15 +62,7 @@ jobs:
           yarn install
           yarn build
           yarn tauri build
-      - name: Install Windows SDK
-        run: |
-          choco install windows-sdk-10-version-2004
-        shell: powershell
 
-      - name: Set up .NET Core
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 3.1
       - name: sign msi
         run: |
            $cert = New-SelfSignedCertificate -Subject "CN=Certificate" -CertStoreLocation "Cert:\LocalMachine\My" -KeyUsage DigitalSignature -Type CodeSigningCert -KeySpec Signature -NotAfter (Get-Date).AddDays(90)
