--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -21,9 +21,7 @@ jobs:
           node-version: 18.x
 
       - name: Install Windows SDK
-        run: |
-          Invoke-WebRequest -Uri https://aka.ms/winsdk/10/latest/SdkSetup.exe -OutFile $env:TEMP\SdkSetup.exe
-          Start-Process -Wait -FilePath $env:TEMP\SdkSetup.exe -ArgumentList '/quiet /features /installpath:C:\Program Files (x86)\Windows Kits\10'
+        run: Invoke-WebRequest -Uri https://aka.ms/winsdk/10/latest/SdkSetup.exe -OutFile $env:TEMP\SdkSetup.exe
         shell: powershell
 
       - name: Set up .NET Core
