feat: integrate RxDB local db to rest api tool [SP-267]

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "jsoneditor": "^9.10.3",
     "path": "^0.12.7",
     "petrel": "^1.0.7",
+    "rxdb": "^14.17.1",
+    "rxjs": "^7.8.1",
     "svelte-agnostic-draggable": "^0.2.0",
     "svelte-jsoneditor": "^0.18.9",
     "svelte-navigator": "^3.2.2",
