--- a/.github/workflows/publish-mac.yaml
+++ b/.github/workflows/publish-mac.yaml
@@ -3,7 +3,7 @@ name: Mac Build, Sign, and Download Tauri App
 on:
   push:
     branches:
-      - development
+      - none
 
 env: 
  VITE_API_URL: ${{secrets.VITE_API_URL}}
