--- a/.github/workflows/publish-mac.yaml
+++ b/.github/workflows/publish-mac.yaml
@@ -81,4 +81,4 @@ jobs:
     - name: Upload to App Center
       run: |
         appcenter login --token ${{ secrets.APPCENTER_API_TOKEN_MAC }}
-        appcenter distribute release -f /Users/runner/work/sparrow-app/sparrow-app/src-tauri/target/release/bundle/dmg/sparrow-app_0.0.0_x64.dmg -g Collaborators --app Techdome/Sparrow-1 --build-version v12.23.${{ github.run_number }}
+        appcenter distribute release -f /Users/runner/work/sparrow-app/sparrow-app/src-tauri/target/release/bundle/dmg/sparrow-app_0.0.0_x64.dmg -g Collaborators --app Techdome/Sparrow-1 --build-version v12.23.${{ github.run_number }} --build-number ${{ github.run_number }}
