refactor: code for coming-soon [SP-280]

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "isolatedModules": true,
     "paths": {
       "$lib/*": ["./src/lib/*"],
+      "$pages/*": ["./src/pages/*"],
     }
   },
   "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
