--- a/.github/workflows/publish-mac.yaml
+++ b/.github/workflows/publish-mac.yaml
@@ -33,7 +33,7 @@ jobs:
     - name: Install Dependencies
       run: |
         yarn install
-        yarn build
+        yarn build --debug
 
     - name: Build Tauri App
       run: |
