--- a/.github/workflows/publish-mac.yaml
+++ b/.github/workflows/publish-mac.yaml
@@ -39,7 +39,7 @@ jobs:
       run: |
         APPLE_SIGNING_IDENTITY="${{ secrets.APPLE_SIGNING_IDENTITY }}"
         APPLE_CERTIFICATE="${{ secrets.APPLE_CERTIFICATE }}"
-        APPLE_CERTIFICATE_PASSWORD="${{ secrets.APPLE_CERTIFICATE_PASSWORD }}" yarn tauri build
+        APPLE_CERTIFICATE_PASSWORD="${{ secrets.APPLE_CERTIFICATE_PASSWORD }}" yarn tauri build --debug
 
     # - name: Archive and Sign App
     #   run: |
