feat: changes in rxdb logout flow [SP-286]

--- a/.github/workflows/publish-mac.yaml
+++ b/.github/workflows/publish-mac.yaml
@@ -7,6 +7,9 @@ on:
 
 env: 
  VITE_API_URL: ${{secrets.VITE_API_URL}}
+ VITE_RXDB_DB_NAME: ${{secrets.VITE_RXDB_DB_NAME}}
+ VITE_API_TIMEOUT: ${{secrets.VITE_API_TIMEOUT}}
+
 
 jobs:
   build_and_sign:
