--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,6 +23,8 @@ nfd = "0.0.4"
 reqwest = { version = "0.11", features = ["blocking", "json", "multipart", "stream"] }
 tokio = { version = "1", features = ["full"] }
 tokio-util = { version = "0.6", features = ["full"] }
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
