--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "bootstrap": "^5.3.1",
     "btoa": "^1.2.1",
     "font-awesome": "^4.7.0",
+    "js-yaml": "^4.1.0",
     "jsoneditor": "^9.10.3",
     "monaco-editor": "^0.44.0",
     "path": "^0.12.7",
     "rxdb": "^14.17.1",
     "rxjs": "^7.8.1",
     "svelte-agnostic-draggable": "^0.2.0",
+    "svelte-file-dropzone": "^2.0.2",
     "svelte-jsoneditor": "^0.18.9",
     "svelte-motion": "^0.11.5",
     "svelte-navigator": "^3.2.2",
