--- a/.github/workflows/publish-win.yaml
+++ b/.github/workflows/publish-win.yaml
@@ -42,7 +42,7 @@ jobs:
            $password = ConvertTo-SecureString -String "sparrow123" -Force -AsPlainText
            Export-PfxCertificate -Cert $certPath -FilePath "D:\a\sparrow-app\sparrow-app\src-tauri\target\debug\bundle\Certificate.pfx" -Password $password
            & "C:\Program Files (x86)\Windows Kits\10\bin\10.0.22621.0\x86\SignTool.exe" sign /f "D:\a\sparrow-app\sparrow-app\src-tauri\target\debug\bundle\Certificate.pfx" /p sparrow123 /tr http://timestamp.digicert.com /td sha256 /fd sha256 /v "D:\a\sparrow-app\sparrow-app\src-tauri\target\debug\bundle\msi\Sparrow-app_0.0.0_x64_en-US.msi"
-           
+
       - uses: actions/checkout@master
       - name: Archive Release
         uses: thedoctor0/zip-release@0.7.5
@@ -93,7 +93,7 @@ jobs:
 
       #       The workflow (sparrow-app for windows) has completed with status: **${{ job.status }}**.
 
-      #       👉 Check it out latest release here [AppCenter](https://appcenter.ms/users/techdome/apps/Sparrow)!
+      #       👉 Check it out latest release  [AppCenter](https://appcenter.ms/users/techdome/apps/Sparrow)!
       #     titleBackgroundColor: ${{ job.status }}
       #   env:
       #     SHOULD_DISPLAY_VIEW_COMMIT_BUTTON: true
