--- a/.github/workflows/publish-win.yaml
+++ b/.github/workflows/publish-win.yaml
@@ -60,15 +60,15 @@ jobs:
           name: artifact
           path: release.zip
 
-      - uses: google-github-actions/release-please-action@v4
-        id: release
-        with:
-          release-type: node
-      - name: Upload Release Artifact
-        if: ${{ steps.release.outputs.release_created }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB }}
-        run: gh release upload ${{ steps.release.outputs.tag_name }} ./artifact/release.zip
+      # - uses: google-github-actions/release-please-action@v4
+      #   id: release
+      #   with:
+      #     release-type: node
+      # - name: Upload Release Artifact
+      #   if: ${{ steps.release.outputs.release_created }}
+      #   env:
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB }}
+      #   run: gh release upload ${{ steps.release.outputs.tag_name }} ./artifact/release.zip
 
       # - name: Install App Center CLI
       #   run: |
