--- a/package.json
+++ b/package.json
@@ -14,12 +14,24 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@codemirror/lang-html": "^6.4.7",
+    "@codemirror/lang-javascript": "^6.2.1",
+    "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/lang-markdown": "^6.2.4",
+    "@codemirror/lang-xml": "^6.0.2",
+    "@codemirror/language": "^6.10.0",
+    "@codemirror/language-data": "^6.3.1",
+    "@codemirror/state": "^6.4.0",
+    "@lezer/highlight": "^1.2.0",
+    "@lezer/javascript": "^1.4.13",
     "@tauri-apps/api": "^1.4.0",
     "@tauri-apps/cli": "^1.5.1",
     "axios": "^1.5.1",
     "body-scroll-lock": "^4.0.0-beta.0",
     "bootstrap": "^5.3.1",
     "btoa": "^1.2.1",
+    "codemirror": "^6.0.1",
+    "codemirror-json-schema": "^0.6.1",
     "font-awesome": "^4.7.0",
     "js-yaml": "^4.1.0",
     "jsoneditor": "^9.10.3",
