feat: created release.yaml[1]

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -48,4 +48,4 @@ jobs:
       - name: Semantic Release
         run: npx semantic-release
         env:
-          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.PR_GITHUB_TOKEN }}
