--- a/package.json
+++ b/package.json
@@ -83,8 +83,7 @@
         "@semantic-release/git",
         {
           "assets": [
-            "dist/**/*.{js,css}",
-            "docs",
+            "CHANGELOG.md",
             "package.json"
           ],
           "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
