--- a/package.json
+++ b/package.json
@@ -86,7 +86,7 @@
             "CHANGELOG.md",
             "package.json"
           ],
-          "message": "chore(release): ${nextRelease.version} [skip ci]\n\n${nextRelease.notes}"
+          "message": "chore(release): ${nextRelease.version} [skip ci]"
         }
       ],
       [
