--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@codemirror/language": "^6.10.0",
     "@codemirror/state": "^6.4.0",
     "@lezer/highlight": "^1.2.0",
-    "@tauri-apps/api": "^1.4.0",
-    "@tauri-apps/cli": "^1.5.1",
+    "@tauri-apps/api": "^2.0.0-beta.0",
+    "@tauri-apps/cli": "^2.0.0-beta.1",
+    "@tauri-apps/plugin-os": "^2.0.0-beta.0",
+    "@tauri-apps/plugin-window": "^2.0.0-alpha.1",
     "axios": "^1.5.1",
     "body-scroll-lock": "^4.0.0-beta.0",
     "bootstrap": "^5.3.1",
