--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -33,19 +33,31 @@ jobs:
             npm install -g pnpm
             # pnpm install
             yarn install
+            # yarn tauri build --debug
+      - name: Build Tauri App
+        run: |
+            $TAURI_PRIVATE_KEY="${{ secrets.TAURI_PRIVATE_KEY }}"
+            $TAURI_KEY_PASSWORD="${{ secrets.TAURI_KEY_PASSWORD }}" 
             yarn tauri build --debug
+        env:
+           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
+           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
+           GITHUB_TOKEN: ${{ secrets.PR_GITHUB_TOKEN }}
+
+      - name: Print file content
+        run: Get-Content D:\a\sparrow-app\sparrow-app\src-tauri\target\debug\bundle\msi\sparrow-app_1.0.0_x64_en-US.msi.zip.sig
+
+      - name: Print file content
+        run: Get-Content D:\a\sparrow-app\sparrow-app\src-tauri\target\debug\bundle\nsis\sparrow-app_1.0.0_x64-setup.nsis.zip.sig
+
+
       - name: Fetch Version from package.json
         id: fetch-version
         run: echo "::set-output name=version::$(jq -r .version package.json)"
-            
-      - name: Rename .exe file with version
-        run: mv D:/a/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/nsis/sparrow-app_0.0.0_x64-setup.exe "D:/a/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/nsis/sparrow-app_${{ steps.fetch-version.outputs.version }}_x64-setup.exe"
-
-      - name: Rename .msi file with version
-        run: mv D:/a/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/msi/sparrow-app_0.0.0_x64_en-US.msi "D:/a/sparrow-app/sparrow-app/src-tauri/target/debug/bundle/msi/sparrow-app_${{ steps.fetch-version.outputs.version }}_x64_en-US.msi"
-    
+        
 
       - name: Semantic Release
         run: npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.PR_GITHUB_TOKEN }}
+          
