--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -5,6 +5,12 @@ on:
     branches:
       - main
 
+env: 
+ VITE_API_URL: ${{secrets.VITE_API_URL}}
+ VITE_MIX_PANEL_TOKEN: ${{secrets.VITE_MIX_PANEL_TOKEN}}
+ VITE_ENABLE_MIX_PANEL: ${{secrets.VITE_ENABLE_MIX_PANEL}}
+ VITE_API_TIMEOUT: ${{secrets.VITE_API_TIMEOUT}}
+
 jobs:
   release:
     runs-on: windows-latest
